2003-12-21  Laurent Sansonetti  <lrz@gnome.org>

	* extconf.rb: Removed obsolete directive.

2003-12-17  Laurent Sansonetti  <lrz@gnome.org>

	* src/*.c: Fixed GEnum/GFLags <=> Ruby conversions, added
	  Gda::Value::Type constants and fixed a doc typo in a comment.

2003-12-15  Laurent Sansonetti  <lrz@gnome.org>

	* src/rbgdadatasource.c: Constructor did not accept nil as the
	  username parameter.

2003-12-14  Laurent Sansonetti  <lrz@gnome.org>

	* src/rbgdaclient.c, src/rbgdavalue.c: Fixed some typos in the
	  comments.

2003-12-12  Laurent Sansonetti  <lrz@gnome.org>

	* src/*.c: Added documentation (for extdoc.rb).

2003-12-09  Laurent Sansonetti  <lrz@gnome.org>

	* src/rbgdadatasource.c, src/rbgdaprovider.c: Removed obsolete code.
	* README: Ruby/Libgda needs libgda 1.1.1 (development branch).

2003-11-29  Laurent Sansonetti  <lrz@gnome.org>

	* src/rbgdaerror.c: Gda::Error.new has been improved
	  to optionally accept parameters as description, number,
	  source, sqlstate.
	* src/rbgdaparameterlist.c: Added Gda::ParameterList#empty?
	* src/rbgdaprovider.c: Added Gda::Provider#== and
	  Gda::Provider#name (alias to #prov_id).
	* tests/*.rb: Cleaned test suite.

2003-11-28  Laurent Sansonetti  <lrz@gnome.org>

	* src/rbgdaparameterlist.c: Fixed a bug in
	  Gda::ParameterList (#parameters, #each_param).

2003-11-20  Laurent Sansonetti  <lrz@gnome.org>

	* src/rbgdaparameterlist.c: Fixed GC-related bug in
	  Gda::ParameterList#add (fix provided by Masao Mutoh).

2003-11-19  Laurent Sansonetti  <lrz@gnome.org>

	* README: libgda 1.0.2 or newer is needed.

2003-11-17  Laurent Sansonetti  <lrz@gnome.org>

	* src/rbgda.h, src/rbgdadatasource.c, src/rbgdaprovider.c:
	  Fixed bug (GDA_TYPE_DATASOURCE was used instead of
	  GDA_TYPE_DATA_SOURCE_INFO, same thing for PROVIDER).
	* src/rbgdaclient.c, src/rbgdacommand.c, src/rbgdaconnection.c,
	  src/rbgdaexport.c, src/rbgdatransaction.c:
	  Uses G_DEF_CONSTANTS().

2003-11-14  Laurent Sansonetti  <lrz@gnome.org>
